I had to put pen to paper to figure out exactly what I was after with the math - the remainder.  I was totally confused with the order of things at first, too - I thought I needed the next time before the minutes away. I had a few lightbulbs go off, though which is great.  I think I'm finished now with the logic and need to pretty it up!

--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
               <th scope="col">Minutes Away</th>                          
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>Thomas the Tank Engine</td>
-              <td>Pleasantville</td>
-              <td>25</td>
-              <td></td>
-              <td></td>              
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
       <div class="container">
